fixed text-wrapping issue in tag bubbles

--- a/client/src/format/mixd.css
+++ b/client/src/format/mixd.css
@@ -147,7 +147,8 @@ img {
     padding-right: 10px;
     padding-left: 10px;
     border-radius: 20px;
-    font-size: 15px
+    font-size: 15px;
+    white-space: nowrap;
 }
 
 h1 {
